# bluepill-template

./: .gitignore  .gitmodules  CMakeLists.txt  flash.sh
cmake/: freertos.cmake  libopencm3.cmake  toolchain.cmake
config/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.c  opencm3.c
